--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <section class="home" id="home">
                 <div class="home__container bd-container bd-grid">
                     <div class="home__data">
-                        <span class="home__greeting">Welcome To My Portfolio</span>
+                        <span class="home__greeting">Welcomes To My Portfolio</span>
                         <h1 class="home__name">Moch Eko Budi Setiawan</h1>
                         <span class="home__profession">Junior Web Developer | Cloud Computing</span>
                         <div class="dropdown">
