--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
 
                     <div class="home__img">
-                        <img data-src="https://ekobudi.my.id/assets/img/eko.png" class="lazy" alt=""  style="width:275px !important" height="100px">
+                        <img data-src="assets/img/eko.png" class="lazy" alt=""  style="width:275px !important" height="100px">
                     </div>
                 </div>
             </section>
