--- a/index.html
+++ b/index.html
@@ -640,6 +640,7 @@ Password: 123">
         <!--===== MAIN JS =====-->
         <script src="assets/js/main.js"></script>
         <script type="text/javascript" src="assets/js/custom.js"></script>
+        <!-- //new -->
 
      <script>
     $(document).ready(function(){
